--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,10 @@ security:
       secret-key: Z{sW8xjl7b}4{fyrEt+F(Zf+za5Q+mBLetiEI(p*KilB$Bs)wf;e4UPUu+mh
       expire-length: 360000
 
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/registry/eureka
+
